# gork-protocol

./: .gitignore  CHANGELOG.md  CONTRACT_DEBUG.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DEPLOY_RAILWAY.md  Dockerfile.railway  Dockerfile.relay  E2E_TEST_RESULTS.md  RAILWAY_DEPLOY.md  README.md  RELAY_SUCCESS.md  SEAMLESS_DISCOVERY.md  SECURITY_FIXES.md  SKILLS.md  VARIANT_C_COMPLETE.md  VARIANT_C_PLAN.md  VARIANT_C_TEST_COMPLETE.md  VARIANT_C_TEST_RESULTS.md  WEB_OF_TRUST.md  ZERO_CONFIG.md  deploy-testnet.sh  docker-compose.relay.yml  docker-entrypoint.sh  relay-config.json  test_discovery  test_discovery.rs
contracts/gork-registry/: Cargo.toml
contracts/gork-registry/src/: lib.rs
contracts/registry/: AGENT_SKILLS_EXTENSION.md  Cargo.toml  README.md  SKILLS_IMPLEMENTATION_COMPLETE.md
contracts/registry/src/: lib.rs  registration.rs  trust.rs
docs/: AGENT_SKILLS_IMPLEMENTATION.md  AGENT_SKILLS_INTEGRATION.md  EXTEND_EXISTING_REGISTRY.md  FULL_ARCHITECTURE.md  MANDATORY_NEAR_VERIFICATION.md  MESSAGE_SECURITY.md  NEAR_LOGIN.md  P2P_AGENT_COLLABORATION.md  P2P_TEST_GUIDE.md  PEER_AUTHENTICATION.md  README.md  RELAY_DESIGN.md  RELAY_QUICKSTART.md  RELAY_TEST_RESULTS.md  SECURITY.md  SKILLS_ARCHITECTURE.md  SKILLS_CLI_COMPLETE.md  SKILLS_QUICKSTART.md  TWO_AGENT_VERIFICATION.md  VERIFICATION_REPORT.md
examples/: test_dns.rs
examples/csv-analyzer/: skill.yaml
src/: auth.rs  certificate.rs  dns.rs  lib.rs  load_balancing.rs  main.rs  register.rs  registry.rs  relay_discovery.rs
src/crypto/: mod.rs
src/near/: mod.rs
src/network/: mod.rs
src/relay/: mod.rs
src/security/: mod.rs
src/skills/: collaboration.rs  manifest.rs  mod.rs  protocol.rs
src/storage/: mod.rs
src/types/: mod.rs
test-minimal/: Cargo.toml
test-minimal/src/: lib.rs
tests/: README.md  cli_test.rs  p2p_bidirectional_test.rs  p2p_integration_test.rs  p2p_manual_test.rs.disabled  p2p_messaging_test.rs  p2p_smoke_test.rs  peer_auth_demo.rs  test-relay-e2e.sh  test_two_agents.sh  test_two_agents_simple.sh  verify_p2p.sh  verify_two_agents.sh
