[package]
name = "gork-agent-registry"
version = "1.0.0"
edition = "2021"
authors = ["Gork <irongork.near>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.0", features = ["legacy"] }
borsh = { version = "1.5", features = ["unstable__schema"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.17.0", features = ["legacy", "unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
